--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+    <title>Etch a Sketch</title>
     <link rel="stylesheet" href="styles/reset.css" type="text/css" media="all">
     <link rel="stylesheet" href="styles/main.css" type="text/css" media="all">
 </head>
@@ -11,13 +12,14 @@
 
     <div id="main-page">
         <div id="nav">
-            <button id="clear">Clear</button>
+            <button id="btn">Clear</button>
         </div>
 
         <div id=content>
             <div id="canvas">
                 
             </div>
+            <script src="etch-a-sketch.js"></script>
         </div>
     </div>
 </body>
@@ -27,4 +29,3 @@
 
 </html>
 
-<script src="etch-a-sketch.js"></script>
