--- a/etch-a-sketch.html
+++ b/etch-a-sketch.html
@@ -12,10 +12,11 @@
 
     <div id="main-page">
         <div id="nav">
-            <button id="btn">Clear</button>
+            <h1>Etch a Sketch</h1>
         </div>
 
         <div id=content>
+            <button id="btn">Clear</button>
             <div id="canvas">
                 
             </div>
